macro(use_c99)
    if (CMAKE_VERSION VERSION_LESS "3.1")
        if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
            set (CMAKE_C_FLAGS "--std=gnu99 ${CMAKE_C_FLAGS}")
        endif ()
    else ()
        set (CMAKE_C_STANDARD 99)
    endif ()
endmacro(use_c99)
cmake_minimum_required(VERSION 3.14)
use_c99()
project(netkit)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(threadpool)
add_subdirectory(ringbuffer)